# conan-pugixml

./: CMakeLists.txt  appveyor.yml  build.py  conanfile.py
test_package/: CMakeLists.txt  conanfile.py
